[package]
name = "bingo_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
directories = "5.0"
egui = "0.27"
egui_plot = "0.27"
